chore: blocktypes && max stack size